<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Aplikasi #1 untuk Berbagi Cerita Dimanapun, Kapanpun, Siapapun! secepat mungkin</string>
    <string name="title_welcome_page">Story App</string>
    <string name="title_signup_page">Berbagi Cerita Dimanapun, Kapanpun, Siapapun!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Selamat datang kembali 👋</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="loading">Loading…</string>
    <string name="tambahkan_deskripsi">Tambahkan Deskripsi....</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="foto_story_app_kamu">foto story app kamu</string>
    <string name="password_error_message">Password harus lebih dari 8 Karaketer</string>
    <string name="email_error_message">Masukkan email yang Benar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba lagi</string>
</resources>